--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -143,6 +143,7 @@ publications},
     author = {Nico Riedel},
     year = {2019},
     note = {R package version 5.0},
+    note = {RRID:SCR_018385},
     url = {https://github.com/quest-bih/oddpub},
   }
 
@@ -365,4 +366,23 @@ publisher = {eLife Sciences Publications, Ltd},
 	URL = {https://www.medrxiv.org/content/early/2020/04/26/2020.04.21.20074732},
 	eprint = {https://www.medrxiv.org/content/early/2020/04/26/2020.04.21.20074732.full.pdf},
 	journal = {medRxiv}
+}
+
+@Book{NAP25303,
+  author    = "National Academies of Sciences, Engineering, and Medicine",
+  title     = "Reproducibility and Replicability in Science",
+  isbn      = "978-0-309-48616-3",
+  doi       = "10.17226/25303",
+  abstract  = "One of the pathways by which the scientific community confirms the validity of a new scientific discovery is by repeating the research that produced it. When a scientific effort fails to independently confirm the computations or results of a previous study, some fear that it may be a symptom of a lack of rigor in science, while others argue that such an observed inconsistency can be an important precursor to new discovery.\nConcerns about reproducibility and replicability have been expressed in both scientific and popular media. As these concerns came to light, Congress requested that the National Academies of Sciences, Engineering, and Medicine conduct a study to assess the extent of issues related to reproducibility and replicability and to offer recommendations for improving rigor and transparency in scientific research.\nReproducibility and Replicability in Science defines reproducibility and replicability and examines the factors that may lead to non-reproducibility and non-replicability in research. Unlike the typical expectation of reproducibility between two computations, expectations about replicability are more nuanced, and in some cases a lack of replicability can aid the process of scientific discovery. This report provides recommendations to researchers, academic institutions, journals, and funders on steps they can take to improve reproducibility and replicability in science.",
+  url       = "https://www.nap.edu/catalog/25303/reproducibility-and-replicability-in-science",
+  year      = 2019,
+  publisher = "The National Academies Press",
+  address   = "Washington, DC"
+}
+
+@article{cacioppo2015social,
+  title={Social, behavioral, and economic sciences perspectives on robust and reliable science},
+  author={Cacioppo, John T and Kaplan, Robert M and Krosnick, Jon A and Olds, James L and Dean, Heather},
+  journal={Report of the Subcommittee on Replicability in Science Advisory Committee to the National Science Foundation Directorate for Social, Behavioral, and Economic Sciences},
+  year={2015}
 }
