--- a/outputs/paper/paper.tex
+++ b/outputs/paper/paper.tex
@@ -109,7 +109,7 @@
 
 \title{Reproducibility of COVID-19 pre-prints\thanks{\textbf{Preprint:} This present manuscript is a version of a preprint by the authors (Collins and Alexander 2021). The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. \textbf{Acknowledgements:} We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. Two anonymous reviewers and the editor provided extensive comments that substantially improved this paper and we are grateful to them. \textbf{Funding statement:} Collins thanks CANSSI Ontario and Monica Alexander for financial support. \textbf{Data accessibility statement:} Code and data are available at: \url{https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints}. \textbf{Author contributions:} Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version.}}
 \author{Annie Collins\footnote{University of Toronto.} \and Rohan Alexander\footnote{University of Toronto, \href{mailto:rohan.alexander@utoronto.ca}{\nolinkurl{rohan.alexander@utoronto.ca}}.}}
-\date{10 January 2022}
+\date{11 January 2022}
 
 \begin{document}
 \maketitle
@@ -122,7 +122,9 @@ To examine the reproducibility of COVID-19 research, we create a dataset of pre-
 
 Scientists use open repositories of papers to disseminate their research more quickly than is possible in traditional journals or conference proceedings, and also to obtain feedback on their work prior to publication. These repositories, such as arXiv, bioRxiv, medRxiv, and SocArXiv, are a critical component of scientific communication and a lot of research builds on the pre-prints posted there. Pre-print repositories have been especially important during the 2019 novel coronavirus (COVID-19) pandemic and the changes it has imposed on the scientific community (Else 2020). The centrality of pre-prints to science means that it is important that the results that are posted are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a pre-print.
 
-Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories are important. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following Weissgerber et al. (2021), we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 30 June 2021. By way of background, each of these four repositories has a different focus: arXiv is general although it has especially high rates of usage from fields like mathematics, physics, and computer science, bioRxiv focuses on biological sciences, medRxiv focuses on health sciences, and SocArXiv focuses on social sciences. We search for markers of open science as indicators of reproducibility, specifically open data and open code.
+Neither peer-review nor credentials are a panacea nor a guarantee of quality. And the gate-keeping and slow publication times of traditional journals mean pre-print repositories are important. But it is important that scientists impose standards on themselves, and arguably repositories have a role to play here. Following Weissgerber et al. (2021), we examine pre-prints about COVID-19 posted to arXiv, bioRxiv, medRxiv, and SocArXiv from 28 January 2020 through to 30 June 2021. By way of background, each of these four repositories has a different focus: arXiv is general although it has especially high rates of usage from fields like mathematics, physics, and computer science, bioRxiv focuses on biological sciences, medRxiv focuses on health sciences, and SocArXiv focuses on social sciences.
+
+We search for markers of open science as indicators of reproducibility, specifically open data and open code. The definition of reproducibility tends to vary by context and academic field. For the purposes of this paper, we define reproducibility to mean the ability for different researchers to achieve the same results given the same data and computational methods as the original source. This contrasts replicability, which we define as the ability for different researchers to achieve consistent results by conducting the full data collection and analysis process in lieu of reusing original data. These definitions match that of National Academies of Sciences and Medicine (2019) and Cacioppo et al. (2015).
 
 We find that of the papers sampled, approximately 75 per cent of papers from arXiv, 67 per cent of papers from bioRxiv, 79 per cent of papers from medRxiv, and 85 per cent of papers from SocArXiv contain neither open data nor open code markers. A summary of our main results is contained in Figure \ref{fig:flowchart}. Examining trends over time, we find that the proportion of pre-prints containing open data or code markers has fluctuated but shown no obvious trend throughout the pandemic. We also find that the presence of open data or open code markers seems to have little association with a pre-print's subsequent publication, and the subset of sampled pre-prints that have been published contains approximately the same proportion of papers with these markers.
 
@@ -152,7 +154,9 @@ For pre-COVID-19 pre-prints, we created a local copy of each repository containi
 \hypertarget{open-data-and-code-detection}{%
 \subsection{Open data and code detection}\label{open-data-and-code-detection}}
 
-We checked our sampled pre-prints for open data and code markers using the Open Data Detection in Publications (ODDPub) text mining algorithm (Riedel, Kip, and Bobrov 2020) within the \texttt{oddpub} R package (Riedel 2019). This required downloading each pre-print as a PDF, which we did using \texttt{heapsofpapers} (Alexander and Mahfouz 2021) and then converting the PDFs to text files. Some papers from SocArXiv were only available in Word document format (.docx) and were downloaded as such and then converted to text format. We then conducted the open data and open code detection procedure, which involved searching for keywords and other markers of open data and open code availability. This was conducted using the \texttt{open\_data\_search()} function from the \texttt{oddpub} package. What constitutes open code or open data is complicated and discipline specific. The details of the \texttt{oddpub} approach are available in Riedel, Kip, and Bobrov (2020). The general criteria are that specific mention should be made of where the data and code are located, and that data should be as close to raw as possible. Our work was conducted using the statistical programming language R (R Core Team 2020).
+We checked our sampled pre-prints for open data and code markers using the Open Data Detection in Publications (ODDPub) text mining algorithm (Riedel, Kip, and Bobrov 2020) within the \texttt{oddpub} R package (Riedel 2019). This required downloading each pre-print as a PDF, which we did using \texttt{heapsofpapers} (Alexander and Mahfouz 2021) and then converting the PDFs to text files. Some papers from SocArXiv were only available in Word document format (.docx) and were downloaded as such and then converted to text format. We then conducted the open data and open code detection procedure, which involved searching for keywords and other markers of open data and open code availability. This was conducted using the \texttt{open\_data\_search()} function from the \texttt{oddpub} package. Under original validation process, the ODDPub algorithm performed with a sensitivity of 0.73 and a specificity of 1.00 for open code detection and a sensitivity of 0.73 and a specificity of 0.97 for open data detection compared with manual screening (Riedel, Kip, and Bobrov 2020).
+
+What constitutes open code or open data is complicated and discipline specific. The details of the \texttt{oddpub} approach are available in Riedel, Kip, and Bobrov (2020). The general criteria are that specific mention should be made of where the data and code are located, and that data should be as close to raw as possible. Data and code must also be freely accessible to anyone (no request, application, registration process, or affiliation required). Our work was conducted using the statistical programming language R (R Core Team 2020).
 
 The result of this process is a dataset indicating the presence of open data or open code markers in each pre-print (with a logical vector for each marker, followed by the relevant open data or open code statements where applicable). Our final dataset was formed by joining this output with the original sample metadata, typically using the DOI or the unique file name, to form a dataset including all original metadata for each pre-print alongside its open data and open code status and markers.
 
@@ -276,7 +280,7 @@ On the other hand, the analyzed arXiv and SocArXiv COVID-19-related pre-prints c
 \hypertarget{publication-status}{%
 \subsection{Publication status}\label{publication-status}}
 
-Our metadata also contains an indication of whether a pre-print has been published, in the form of a DOI linking to the corresponding published paper. The proportion of pre-prints that have been published varies by repository (Table \ref{tab:published-sample-summary}). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportions from arXiv and SocArXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \ref{pre-pandemic-pre-prints} suggest that this pattern pre-dates the pandemic. These rates are also low in comparison to 2019 pre-prints (approximately half), which is likely a result of publication delays and the high volume of research output related to COVID-19 posted as pre-prints.
+The proportion of pre-prints that have been published varies by repository (Table \ref{tab:published-sample-summary}). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportions from arXiv and SocArXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \ref{pre-pandemic-pre-prints} suggest that this pattern pre-dates the pandemic.
 
 \begin{table}
 
@@ -298,6 +302,8 @@ SocArXiv & 71 & 0.15\\
 \end{table}
 
 In Table \ref{tab:open-published-summary} we disaggregate sampled pre-prints by whether there is an indication of publication. We find that the proportion of pre-prints with open data or code markers among those that have been published is roughly the same as pre-prints that have not been published, differing by only a few percentage points.
+
+There is limited literature examining the relationship between data and code availability in manuscripts between the pre-print and publication stages. McGuinness and Sheppard (2021) examine differences in data availability statements between medRxiv pre-prints and their published counterparts. They find that data availability was maintained for the vast majority of their sample, varying by journal data sharing policy with greater improvements in openness among manuscripts published in journals mandating data sharing. While limited to medRxiv, McGuinness and Sheppard's results mimic our own work and provide initial evidence to suggest that data availability is generally maintained or improved between the pre-print and publication stages.
 
 \begin{table}
 
@@ -335,7 +341,9 @@ Our dataset likely imperfectly characterizes publication and does not have the p
 \hypertarget{on-the-role-of-transparency-and-reproducibility}{%
 \subsection{On the role of transparency and reproducibility}\label{on-the-role-of-transparency-and-reproducibility}}
 
-Transparency and reproducibility are hallmarks of quality scientific research due to their relationship with independent verification (Stodden 2020). Open data and open code contribute to both by allowing the scientific community to more easily verify the authenticity of purported scientific discoveries and their supporting evidence. This is especially important in cases where scientific research may quickly and directly impact clinical practice or public policy, such as research on the COVID-19 pandemic. Among many other impacts on the research landscape, COVID-19 has increased the popularity of pre-prints from both a production and consumption standpoint. The number of COVID-19 pre-prints posted to medRxiv increased in the early stages of the pandemic, while non-COVID-19 pre-print numbers were largely as expected. The same trends were apparent in abstracts accessed by medRxiv users, where COVID-19 pre-print abstracts were viewed over 15 times more than non-COVID-19 pre-print abstracts (Fraser et al. 2021). For these reasons, it is important to examine open science standards and reproducibility within pre-print repositories.
+Transparency and reproducibility are hallmarks of quality scientific research due to their relationship with independent verification (Stodden 2020). Open data and open code contribute to both by allowing the scientific community to more easily verify the authenticity of purported scientific discoveries and their supporting evidence. Data sharing also allows others to reuse other researchers' data sets for further analysis or to supplement their own data, contributing to new insights within their field of study.
+
+These factors are especially important in cases where scientific research may quickly and directly impact clinical practice or public policy, such as research on the COVID-19 pandemic. Among many other impacts on the research landscape, COVID-19 has increased the popularity of pre-prints from both a production and consumption standpoint. The number of COVID-19 pre-prints posted to medRxiv increased in the early stages of the pandemic, while non-COVID-19 pre-print numbers were largely as expected. The same trends were apparent in abstracts accessed by medRxiv users, where COVID-19 pre-print abstracts were viewed over 15 times more than non-COVID-19 pre-print abstracts (Fraser et al. 2021). For these reasons, it is important to examine open science standards and reproducibility within pre-print repositories.
 
 Open data is generally accepted to be beneficial to the scientific process and to a paper's reproducibility potential, hence it is concerning that around 75 per cent of pre-prints in our sample contained no open data markers. This concern is slightly mitigated by recognition of challenges in working with biomedical data compared with data in other fields, notably privacy and ethics concerns when working with personal data (Floca 2014). The COVID-19 pandemic has seen open science initiatives, as evidenced by the creation of open data repositories such as the dashboard maintained by the Center for Systems Science and Engineering at Johns Hopkins University (Dong, Du, and Gardner 2020) or the large number of publishers who have removed paywalls from published COVID-19 research (Gill 2020). While the intention at the start of the pandemic was that there would be `clear statements regarding the availability of underlying data' (Wellcome Trust 2020) some retractions of work have been based on `unreliable or nonexistent data' (Teixeira da Silva, Bornemann-Cimenti, and Tsigaris 2021). SocArXiv asks submitters to make explicit the degree of openness in the data, and this is something that could be adopted by other pre-print repositories.
 
@@ -366,11 +374,13 @@ There is demand for timely research and high frequency results because the pande
 
 We wish to expand our analysis to consider the geographic distribution of research and the potential influence of different practices and policies concerning open science as pre-prints vary by location. This is important because the epicenter of the pandemic changed throughout the pandemic, which has implications for our time-based analysis.
 
+We recognize that factors beyond open data and code play a large role in the reproducibility of scientific research. Not all pre-prints providing open data or code will be reproducible. Factors such as data documentation, methodological reporting, software choice, and many others all play a role in the reproduction process and should be regarded with just as much gravity when disseminating results.
+
 An important weakness is the potential presence of false negatives in indicators of publication in our dataset. Abdill and Blekhman (2019) estimate that the false-negative rate may be as high as 37.5 per cent for data pulled from the bioRxiv API, meaning analysis of published papers may represent only a fraction of those that have been published. It is unclear to what extent this is the case for other repositories or what bias may exist in the subset of pre-prints for which publication was detected, because it is likely that this process relies on title-based text matching (Abdill and Blekhman 2019). It is also likely that some of our more recent sampled pre-prints will be published in the future which we could not account for at the time of our data collection.
 
 Our paper depends on search responses from the various repositories, which are based on our selection of keywords. Our selection of keywords is not exhaustive, for instance, perhaps `the pandemic' could result in additional papers. Future work could make this keyword approach more systematic, for instance following King, Lam, and Roberts (2017).
 
-We also recognize that this analysis relies heavily on text-based analysis which was not verified directly in most cases and may lead to higher levels of uncertainty. The \texttt{oddpub} package was built to analyze biomedical publications and it may be that some of the differences that we find between repositories are due to this. In future, we wish to take smaller sub-samples to validate factors like publication status, paper topic, and open code and data status, beyond the approaches that we used here.
+We also recognize that this analysis relies heavily on text-based analysis which was not verified directly in most cases and may lead to higher levels of uncertainty. The \texttt{oddpub} package was built to analyze biomedical publications and it may be that some of the differences that we find between repositories are due to this. We also note that the ODDPub algorithm is relatively narrow in its definition of ``open,'' excluding data that is available via registration or in some other restricted form. Adopting a broader definition of openness, either through using a less restrictive algorithm or through manual verification, would likely produce different results particularly for pre-prints using clinical data. In future, we wish to take smaller sub-samples to validate factors like publication status, paper topic, and open code and data status, beyond the approaches that we used here.
 
 \newpage
 
@@ -486,6 +496,9 @@ Bero, Lisa, Rosa Lawrence, Louis Leslie, Kellia Chiu, Sally McDonald, Matthew J 
 \leavevmode\hypertarget{ref-cabanac2021day}{}%
 Cabanac, Guillaume, Theodora Oikonomidi, and Isabelle Boutron. 2021. {``Day-to-Day Discovery of Preprint--Publication Links.''} \emph{Scientometrics} 126 (6): 5285--5304.
 
+\leavevmode\hypertarget{ref-cacioppo2015social}{}%
+Cacioppo, John T, Robert M Kaplan, Jon A Krosnick, James L Olds, and Heather Dean. 2015. {``Social, Behavioral, and Economic Sciences Perspectives on Robust and Reliable Science.''} \emph{Report of the Subcommittee on Replicability in Science Advisory Committee to the National Science Foundation Directorate for Social, Behavioral, and Economic Sciences}.
+
 \leavevmode\hypertarget{ref-collins2021reproducibility}{}%
 Collins, Annie, and Rohan Alexander. 2021. {``Reproducibility of COVID-19 Pre-Prints.''} \url{http://arxiv.org/abs/2107.10724}.
 
@@ -524,6 +537,9 @@ McGuinness, Luke A, and Athena L Sheppard. 2021. {``A Descriptive Analysis of th
 
 \leavevmode\hypertarget{ref-murray2020}{}%
 Murray, Christopher JL. 2020. {``Forecasting the Impact of the First Wave of the COVID-19 Pandemic on Hospital Demand and Deaths for the USA and European Economic Area Countries.''} \emph{medRxiv}. \url{https://doi.org/10.1101/2020.04.21.20074732}.
+
+\leavevmode\hypertarget{ref-NAP25303}{}%
+National Academies of Sciences, Engineering, and Medicine. 2019. \emph{Reproducibility and Replicability in Science}. Washington, DC: The National Academies Press. \url{https://doi.org/10.17226/25303}.
 
 \leavevmode\hypertarget{ref-oikonomidi2020changes}{}%
 Oikonomidi, Theodora, Isabelle Boutron, Olivier Pierre, Guillaume Cabanac, and Philippe Ravaud. 2020. {``Changes in Evidence for Studies Assessing Interventions for COVID-19 Reported in Preprints: Meta-Research Study.''} \emph{BMC Medicine} 18 (1): 1--10.
