--- a/validation/oddpub_validation.Rmd
+++ b/validation/oddpub_validation.Rmd
@@ -29,6 +29,8 @@ socarxiv_2019_open_data_results <-
 
 ## 2019
 
+### Data
+
 Under "attributes.has_data_links", "available" means data link exists, everything else means data link does not exist. NA appears to be the same as "not_applicable", meaning no data link and no justification (i.e. "attributes.why_no_data" is also NA). "no" means data was used but is not available. Justification should be provided in "attributes.why_no_data".
 
 Since ODDPub does not check for areas where open data is not applicable, we should go by 0/1 according to attributes.data_links being populated (i.e. "data_link_available" as defined above).
@@ -69,8 +71,14 @@ socarxiv_2019_open_data_results %>%
   select(title, links.preprint_doi, attributes.has_data_links, attributes.why_no_data, attributes.data_links, is_open_data, open_data_category, open_data_statements)
 ```
 
+### Code
+
+
+
+
 ## 2020/2021
 
+Code was not manually verified for COVID-19 related papers.
 
 ```{r confusion-matrix-2020}
 # SocArXiv 2019 Confusion Matrix
