Address some more comments

--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,3 +1,11 @@
+@misc{barba2018terminologies,
+      title={Terminologies for Reproducible Research}, 
+      author={Lorena A. Barba},
+      year={2018},
+      eprint={1802.03311},
+      archivePrefix={arXiv},
+      primaryClass={cs.DL}
+}
 @article {Beroe051821,
 	author = {Bero, Lisa and Lawrence, Rosa and Leslie, Louis and Chiu, Kellia and McDonald, Sally and Page, Matthew J and Grundy, Quinn and Parker, Lisa and Boughton, Stephanie and Kirkham, Jamie J and Featherstone, Robin},
 	title = {Cross-sectional study of preprints and final journal publications from COVID-19 studies: discrepancies in results reporting and spin in interpretation},
